<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/settings_menu_title" />
    <item
        android:id="@+id/action_tweet"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_tweet_title" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_refresh_title" />
    <item
        android:id="@+id/action_purge"
        android:icon="@android:drawable/btn_minus"
        android:title="@string/action_purge_title" />
</menu>