<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sma.yamba.StatusFragment">

    <Button
        android:id="@+id/button_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:text="@string/button_tweet" />

    <EditText
        android:id="@+id/edit_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_tweet"
        android:ems="10"
        android:hint="@string/edit_status"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/char_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/chars_left"
        android:textSize="24sp"
        android:visibility="visible" />
</RelativeLayout>
